--- a/css/style.css
+++ b/css/style.css
@@ -10,14 +10,16 @@ h1, h2, h3, div, p, a, span, ul, li {
   margin: 0;
 	padding: 0;
 	border: 0;
+
 	font-size: 100%;
 	font: inherit;
 }
 
 body {
-  font-family: 'Jost', Helvetica, Arial, sans-serif;
   background-color: #D8DEE9;
   color: #434c5e;
+
+  font-family: 'Jost', Helvetica, Arial, sans-serif;
 }
 
 ul {
@@ -26,13 +28,49 @@ ul {
 
 .container {
   display: grid;
-  grid-template-columns: 1fr 5fr;
+  grid-template-columns: 320px 1fr;
+  grid-template-rows: 180px 1fr;
 }
 
 .sidebar {
-  grid-row: 1 / span 2;
+  grid-row: 1 / -1;
+
+  display: grid;
+  grid-template-rows: 75px 1fr;
+  gap: 40px;
+  padding: 12px 24px;
+
   background-color: #4C566A;
   color: #ECEFF4;
+
+  font-size: 1.4rem;
+  font-weight: 500;
+}
+
+.sidebar-head,
+.sidebar-nav li {
+  display: grid;
+  grid-template-columns: 50px 1fr;
+  align-items: center;
+  gap: 24px;
+
+  line-height: 3rem;
+}
+
+.sidebar-nav {
+  display: grid;
+  grid-template-rows: min-content 1fr;
+  gap: 40px;
+}
+
+.sidebar h1 {
+  font-size: 1.8rem;
+  font-weight: 600;
+}
+
+.sidebar .placeholder-0,
+.sidebar .placeholder-1 {
+  justify-self: center;
 }
 
 .sidebar a,
@@ -79,6 +117,7 @@ input[type="search"] {
   grid-template-columns: 3fr 1fr;
   grid-template-rows: repeat(2, 1fr);
   gap: 30px;
+  grid-row: 2 / -1;
 }
 
 .projects {
